feat: verify email
